ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: contoso.8a047fea518d4421b23c.eastasia.aksapp.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: contoso-website
            port: 
              name: http
